<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="58dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.dev.javier.redsensores.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="#AAAAAAAA"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/disp_conocidos_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#d2860d"
        android:paddingLeft="5dp"
        android:text="@string/DispConHeader"
        android:textColor="#fff"
        android:visibility="gone"
        />

    <ListView
        android:id="@+id/disp_conocidos_lista"
        android:layout_width="match_parent"
        android:layout_height="218dp"
        android:headerDividersEnabled="false" />

    <TextView
        android:id="@+id/disp_nuevos_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#d2860d"
        android:paddingLeft="5dp"
        android:text="@string/DispNuevosHeader"
        android:textColor="#FFF"
        android:visibility="gone"
        />

    <ListView
        android:id="@+id/disp_nuevos_lista"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        />

    <Button
        android:id="@+id/boton_buscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BotontEmpezar"
        android:theme="@style/MyButton"
        android:onClick="BucarDispositivos"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</LinearLayout>
